<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/blue_magenta_gradient_left_to_right">

        <LinearLayout
            android:id="@+id/linear_lay_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_arrow"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/pb_gray_50_white"
                android:textSize="22sp"
                android:text="@string/back"
                android:fontFamily="@font/precision_sans_w_rg" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/pb_gray_50_white"
            android:textSize="25sp"
            android:text="@string/marketing_content"
            android:layout_toEndOf="@id/linear_lay_back"
            android:layout_toStartOf="@id/relative_lay_print"
            android:fontFamily="@font/precision_sans_w_rg" />

        <RelativeLayout
            android:id="@+id/relative_lay_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground">
            <Button
                android:id="@+id/button_print"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_blue_button_bg"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:text="@string/print"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAllCaps="false"
                android:textColor="@color/pb_gray_50_white"
                android:textSize="20sp"
                android:fontFamily="@font/precision_sans_w_rg" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/pb_gray_300_button_pressed"
            android:elevation="0.5dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <WebView
        android:id="@+id/marketing_content_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_gravity="center"/>

</RelativeLayout>