<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/tab_layout_bg">

    <LinearLayout
        android:layout_width="@dimen/dp_350"
        android:layout_height="wrap_content"
        android:background="@color/facebook_blue"
        android:orientation="vertical"
        android:padding="@dimen/dp_5"
        android:elevation="@dimen/dp_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5">
            <RelativeLayout
                android:id="@+id/relative_lay_cancel"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:visibility="gone"
                android:padding="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_alignParentRight="true"
                android:background="@drawable/custom_ripple_without_border">
                <ImageView
                    android:id="@+id/imageView_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/cancel_icon_white"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textColor="@color/pb_gray_50_white"
                android:textSize="@dimen/sp_22"
                android:text="@string/configure_api_secret_key"
                android:layout_marginTop="@dimen/dp_8"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:shadowColor="@color/pb_gray_200_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_api_key"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_white_bg"
                android:animateLayoutChanges="true"
                android:layout_marginTop="@dimen/dp_15">
                <EditText
                    android:id="@+id/editText_api_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_15"
                    android:hint="@string/enter_api_key"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="60"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="normal"
                    android:textColor="@color/pb_gray_700_black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_secret_key"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_white_bg"
                android:animateLayoutChanges="true"
                android:layout_marginTop="@dimen/dp_10">
                <EditText
                    android:id="@+id/editText_secret_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_15"
                    android:hint="@string/enter_secret_key"
                    android:maxLength="60"
                    android:inputType="text|textNoSuggestions"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="normal"
                    android:textColor="@color/pb_gray_700_black"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relative_lay_submit_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/custom_ripple_with_border">
                <TextView
                    android:id="@+id/textView_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:textColor="@color/pb_gray_50_white"
                    android:textSize="@dimen/sp_16"
                    android:background="@drawable/background_button_pressed"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:shadowColor="@color/pb_gray_200_light"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
